# fortran-glmnet

./: README.md
cmake/: CMAKE_COMPLETE_SUMMARY.html  CMAKE_COMPLETE_SUMMARY.md  CMAKE_GUIDE.html  CMAKE_GUIDE.md  CMakeLists.txt  CMakePresets.json  examples_CMakeLists.txt  setup_cmake_structure.sh  tests_CMakeLists.txt
cmake/cmake/: CompilerFlags_GNU.cmake  CompilerFlags_GNU.cmake.backup  CompilerFlags_Intel.cmake  glmnet_wrapper-config.cmake.in
cmake/examples/: simple_example.f90
cmake/src/: CMakeLists.txt  CMakeLists.txt.backup  glmnet.f  glmnet_wrapper.f90
cmake/tests/: test_glmnet_wrapper.f90
gfortran/: COMPARISON_R_GLMNET.html  COMPARISON_R_GLMNET.md  COMPLETE_WRAPPER_SUMMARY.html  COMPLETE_WRAPPER_SUMMARY.md  FINAL_VALIDATION_REPORT.md  GLMNET_WRAPPER_DOCUMENTATION.html  GLMNET_WRAPPER_DOCUMENTATION.md  HOW_TO_DOWNLOAD_EVERYTHING.md  Makefile  README.md  glmnet_wrapper.f90  glmnet_wrapper.mod  test_glmnet_wrapper
ifx/: COMPILER_COMPARISON.md  DOWNLOAD_INTEL_IFX.md  INTEL_IFX_COMPLETE_INDEX.html  INTEL_IFX_COMPLETE_INDEX.md  INTEL_IFX_GUIDE.html  INTEL_IFX_GUIDE.md  INTEL_IFX_PACKAGE_DOCS.html  INTEL_IFX_PACKAGE_DOCS.md  Makefile.ifx  advanced_ifx_example.f90  benchmark_ifx.f90  build_ifx.sh  compare_compilers.sh  glmnet_wrapper.mod  run_benchmarks_ifx.sh  test_glmnet_wrapper  verify_ifx.sh
